DuPont DevSB/src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Content_Source__c</fullName>
        <inlineHelpText>Original Source of this Document (Independently from who is managing it in this workspace)</inlineHelpText>
        <label>Content Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>M&amp;S-IT</fullName>
                </value>
                <value>
                    <fullName>Other Internal</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service-Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <inlineHelpText>Geography this content is relevant for</inlineHelpText>
        <label>Geography</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AP-ANZ</fullName>
                </value>
                <value>
                    <fullName>AP-ASEAN</fullName>
                </value>
                <value>
                    <fullName>AP-AU</fullName>
                </value>
                <value>
                    <fullName>AP-GCHINA</fullName>
                </value>
                <value>
                    <fullName>AP-ID</fullName>
                </value>
                <value>
                    <fullName>AP-INDIA</fullName>
                </value>
                <value>
                    <fullName>AP-JAPAN</fullName>
                </value>
                <value>
                    <fullName>AP-KOREA</fullName>
                </value>
                <value>
                    <fullName>AP-NZ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA</fullName>
                </value>
                <value>
                    <fullName>EMEA-ECE/MEA-CE-Poland</fullName>
                </value>
                <value>
                    <fullName>EMEA-WE</fullName>
                </value>
                <value>
                    <fullName>EMEA-WE-Belgium</fullName>
                </value>
                <value>
                    <fullName>EMEA-WE-France</fullName>
                </value>
                <value>
                    <fullName>EMEA-WE-Germany</fullName>
                </value>
                <value>
                    <fullName>EMEA-WE-Italy</fullName>
                </value>
                <value>
                    <fullName>EMEA-WE-Luxembourg</fullName>
                </value>
                <value>
                    <fullName>EMEA-WE-Netherlands</fullName>
                </value>
                <value>
                    <fullName>EMEA-WE-Nordic</fullName>
                </value>
                <value>
                    <fullName>EMEA-WE-Portugal</fullName>
                </value>
                <value>
                    <fullName>EMEA-WE-Spain</fullName>
                </value>
                <value>
                    <fullName>EMEA-WE-United Kingdom</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>LASSA</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NA-Canada</fullName>
                </value>
                <value>
                    <fullName>NA-Mexico</fullName>
                </value>
                <value>
                    <fullName>NA-US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Info_Type__c</fullName>
        <description>Nature of the information covered by this content (Independently from the subject described)</description>
        <inlineHelpText>Nature of the information covered by this content (Independently from the subject described)</inlineHelpText>
        <label>Info Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application Information</fullName>
                </value>
                <value>
                    <fullName>Best Practice</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>ISO</fullName>
                </value>
                <value>
                    <fullName>Market Information</fullName>
                </value>
                <value>
                    <fullName>Partner Information</fullName>
                </value>
                <value>
                    <fullName>Pricing Information</fullName>
                </value>
                <value>
                    <fullName>Project Information</fullName>
                </value>
                <value>
                    <fullName>Sales Information</fullName>
                </value>
                <value>
                    <fullName>Technical Documentation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Involved_Org__c</fullName>
        <label>Involved Org</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AGNH-Qualicon</fullName>
                </value>
                <value>
                    <fullName>AGNH-Solae</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>DCF</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-Aniline</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D-DAHS</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D-DWT</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-C&amp;D-Industrial</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-Cyanides</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-MAP/DMS</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-RMS</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-SET</fullName>
                </value>
                <value>
                    <fullName>DCF ChemSol-Vazo</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Clean Agent Fire Extinguishants</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Electronic Gases</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Fluoromonomer Intermediates</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Foam</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Pharmaceutical Propellants</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Propellants</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Refrigerants</fullName>
                </value>
                <value>
                    <fullName>DCF FLCH-Vertrel</fullName>
                </value>
                <value>
                    <fullName>DCF FPS</fullName>
                </value>
                <value>
                    <fullName>DCF FPS-AFFF</fullName>
                </value>
                <value>
                    <fullName>DCF FPS-Catalyst</fullName>
                </value>
                <value>
                    <fullName>DCF FPS-Chemoswed</fullName>
                </value>
                <value>
                    <fullName>DCF FPS-Coatings &amp; Releases</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owning_Org__c</fullName>
        <inlineHelpText>Organisation owning and in charge of this content</inlineHelpText>
        <label>Owning Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DPT-DPP</fullName>
                </value>
                <value>
                    <fullName>DSS</fullName>
                </value>
                <value>
                    <fullName>M&amp;S-IT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Audience__c</fullName>
        <description>Primary Audience likely to make use of this information</description>
        <inlineHelpText>Primary Audience likely to make use of this information</inlineHelpText>
        <label>Primary Audience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>SFDC Admin</fullName>
                </value>
                <value>
                    <fullName>SFDC Engagement</fullName>
                </value>
                <value>
                    <fullName>SFDC User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Publication_Year__c</fullName>
        <description>The year in which this content was Published.</description>
        <label>Publication Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                    <default>true</default>
                    <label>2016</label>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Marketing</fullName>
        <active>true</active>
        <label>Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_CoE_CoO</fullName>
        <active>true</active>
        <label>Sales CoE/CoO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training_Presentations</fullName>
        <active>true</active>
        <label>Training Presentations</label>
    </recordTypes>
</CustomObject>